--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="navbar-end">
         <a class="btn">Bus
-          <img src="/images//bus-icon.png" alt="">
+          <img src="images//bus-icon.png" alt="">
         </a>
       </div>
     </div>
