best offers for you created

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <button class="btn bg-green-500 text-black border-none">Buy Tickets</button>
       </div>
 
-      
+
     </div>
 
     <!-- cards  -->
@@ -87,6 +87,52 @@
   <main>
     <!-- Best offers for you  -->
     <h1 class="text-2xl text-center mt-10">Best offers for you</h1>
+
+    <!-- coupons  -->
+    <div class="flex gap-8 justify-center mt-10">
+      <div class="flex bg-yellow-500 text-center rounded-lg items-center">
+        <div class="p-4">
+          <p class="text-black">
+            <span class="text-2xl font-bold">15% OFF</span> <br>
+            <span>on your next purchase</span> <br>
+            <span class="font-thin">use by January 2024</span>
+          </p>
+        </div>
+        <div>
+          <img class="" src="images/cupon-devider.png" alt="">
+        </div>
+        <div class="p-4">
+          <p class="text-black">
+            <span class="text-2xl font-bold">NEW15</span> <br>
+            <span class="font-thin">Coupon Code</span>
+          </p>
+        </div>
+      </div>
+
+      <div class="flex bg-pink-500 text-center rounded-lg items-center">
+        <div class="p-4">
+          <p class="text-black">
+            <span class="text-2xl font-bold">20% OFF</span> <br>
+            <span>on your next purchase</span> <br>
+            <span class="font-thin">use by January 2024</span>
+          </p>
+        </div>
+        <div>
+          <img src="images/cupon-devider.png" alt="">
+        </div>
+        <div class="p-4">
+          <p class="text-black">
+            <span class="text-2xl font-bold">Couple 20</span> <br>
+            <span class="font-thin">Coupon Code</span>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="mt-10">
+      <button class="btn bg-white text-green-500 border-green-500">See All Offers</button>
+    </div>
+
+
   </main>
 </body>
 
