ticketingX js file created

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </div>
     <!-- Ticketing-X  -->
     <div
-      class="justify-center items-center text-center  bg-[url(images/banner.png)] bg-no-repeat max-w-full max-h-full">
+      class="justify-center items-center text-center  bg-[url(images/banner.png)] bg-no-repeat max-w-full max-h-full content-center">
 
-      <div class="space-y-10">
+      <div class="space-y-10 ">
         <h1 class=" text-6xl text-white font-bold">End-to-End Travel with <br>
           <span class="text-green-500">Ticketing-X</span>
         </h1>
